<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">MoneyTracker</string>
    <string name="welcome_subtitle">Ваши финансы под контролем</string>
    <string name="start_tracking">Начать отслеживание</string>
    <string name="profile_title">Заполните профиль</string>
    <string name="hint_name">Имя</string>
    <string name="hint_salary">Зарплата</string>
    <string name="hint_goal">На что хотите накопить</string>
    <string name="continue_button">Продолжить</string>
    <string name="categories_title">Категории вашего бюджета</string>
    <string name="dream_category">На мечту</string>
    <string name="food_category">На продукты</string>
    <string name="fun_category">На развлечения</string>
    <string name="transport_category">На транспорт</string>
    <string name="zero_currency">0 руб</string>
    <string name="currency_format">%d руб</string>
    <string name="save_button">Сохранить</string>
    <string name="hint_enter_amount">Введите сумму (₽)</string>
</resources>